	PR c++/89709 	* tree.c (inchash::add_expr): Strip any location wrappers. 	* fold-const.c (operand_equal_p): Move stripping of location wrapper 	after hash verification.

* g++.dg/cpp0x/constexpr-89709.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@269702 138bc75d-0d04-0410-961f-82ee72b054a4